--- a/assets/css/roscc.css
+++ b/assets/css/roscc.css
@@ -1,3 +1,9 @@
+.navbar-brand {
+  padding: 10px 15px;
+  font-size: 25px;
+  line-height: 30px;
+}
+
 .panel {
   margin-bottom: 5px;
 }
@@ -5,13 +11,13 @@
   cursor: pointer;
 }
 .panel-active {
-  border: none;
+  border: 1px #2E3D5F solid;
+  border-radius: 4px;
 }
 .panel-active .panel-heading {
   color: white;
   background-color: #2E3D5F;
-  border: 1px #2E3D5F solid;
-  border-radius: 3px;
+  border-color: #2E3D5F;
 }
 
 .sidebar {
